@@ -6,6 +6,7 @@
    * Transfers fatcat stuff to categories
    *
    * @author Matthew McNaney <mcnaney at gmail dot com>
+   * @modified Eloi George <adarkling at users dot sourceforge dot net>
    * @version $Id$
    */
 
@@ -13,7 +14,7 @@ function convert()
 {
     if ( (!Convert::isConverted('webpage') || !Convert::isConverted('blog')) && !isset($_GET['ignore'])) {
         $content[] = _('Any content modules using FatCat should be converted BEFORE continuing.');
-        $content[] = sprintf('<a href="index.php?command=convert&amp;package=menu&amp;ignore=1">%s</a>', _('Click to continue anyway.'));
+        $content[] = sprintf('<a href="index.php?command=convert&amp;package=categories&amp;ignore=1">%s</a>', _('Click to continue anyway.'));
         $content[] = _('Otherwise, click on the "Main page" link above.');
         return implode('<br />', $content);
     }
@@ -66,9 +67,9 @@ function convertItems()
 {
     if (!isset($_REQUEST['mode'])) {
         $content[] = _('You may convert two different ways.');
-        $content[] = sprintf('<a href="%s">%s</a>', 'index.php?command=convert&package=categories&mode=manual',
+        $content[] = sprintf('<a href="%s">%s</a>', 'index.php?command=convert&package=categories&ignore=1&mode=manual',
                              _('Manual mode requires you to click through the conversion process.'));
-        $content[] = sprintf('<a href="%s">%s</a>', 'index.php?command=convert&package=categories&mode=auto',
+        $content[] = sprintf('<a href="%s">%s</a>', 'index.php?command=convert&package=categories&ignore=1&mode=auto',
                              _('Automatic mode converts the data without your interaction.'));
 
         $content[] = ' ';
@@ -143,6 +144,7 @@ function runCatBatch(&$db, &$batch)
             $val['title']       = utf8_encode($oldCat['title']);
             $val['description'] = utf8_encode($oldCat['description']);
             $val['parent']      = $oldCat['parent'];
+            $val['icon'] = convertImage($oldCat['image'], 'Category: ' . $oldCat['title']);
             $newdb->addValue($val);
             $result = $newdb->insert(FALSE);
             $newdb->reset();
@@ -235,6 +237,65 @@ function createSeqTable()
     return $db->updateSequenceTable();
 }
 
+function convertImage ($image_name, $image_alt) 
+{
+	// If there's no image, return
+	if (empty($image_name))
+		return 0;
+
+	// Extract the image name out of FatCat's format
+	$arr = explode(':', $image_name);
+	$image_name = $arr[0];
+
+	// Create an "Category" folder
+    if (!isset($_SESSION['Category Folder'])) {
+	    Convert::siteDB();
+		PHPWS_Core::initModClass('filecabinet', 'Folder.php');
+	    $folder = new Folder;
+	    $folder->setTitle('Categories');
+	    $folder->setDescription('Category images');
+	    $result = $folder->save();
+		$_SESSION['Category Folder'] = $folder->id;
+		$_SESSION['Category Folder_Dir'] = $folder->getFullDirectory();
+	}
+
+	$old_file = PHPWS_HOME_DIR . 'convert/images/fatcat/images/' . $image_name;
+	$new_directory = PHPWS_HOME_DIR . $_SESSION['Category Folder_Dir'];
+	$err = PHPWS_File::fileCopy($old_file, $new_directory, $image_name, 1, 1);
+	if (PEAR::isError($err)) 
+        exit(PHPWS_Error::printError($err));
+	if (!$err) 
+        exit('Something went wrong with the image transfer');
+
+	// Get image specs
+	$image_size = filesize($new_directory . $image_name);
+	if (empty($image_width)) {
+		$x = getimagesize($new_directory . $image_name);
+		$image_width  = $x[0];
+		$image_height = $x[1];
+		$image_type = image_type_to_mime_type($x[2]);
+	}
+
+	// Add the file information to FileCabinet
+	PHPWS_Core::initModClass('filecabinet', 'Image.php');
+	$img = new PHPWS_Image();
+	$img->file_name = utf8_encode($image_name);
+	$img->file_directory = $_SESSION['Category Folder_Dir'];
+	$img->setTitle(utf8_encode($image_alt));
+	$img->setAlt(utf8_encode($image_alt));
+	$img->setSize(utf8_encode($image_size));
+	$img->width = $image_width;
+	$img->height = $image_height;
+	$img->file_type = $image_type;
+	$img->folder_id = $_SESSION['Category Folder'];
+	$result = $img->save(1,0);
+    if (PEAR::isError($result)) {
+        exit(PHPWS_Error::printError($result));
+    }
+
+	// return the new FileCabinet id
+	return $img->id;
+}
 
 
 
